<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:id="@+id/actionBarLayout"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/backButtonTouchArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true">
            <ImageButton
                android:id="@+id/backButton"
                android:visibility="gone"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/left_arrow"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/titleTextView"
            android:text="titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_centerInParent="true"/>

        <RelativeLayout
            android:id="@+id/rightButtonTouchArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true">
            <ImageButton
                android:id="@+id/rightButton"
                android:layout_marginTop="19dp"
                android:layout_marginBottom="19dp"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/gear"
                android:layout_centerVertical="true"/>

        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/configLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainTextView"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                android:text="Fade in Scroll "
                android:layout_marginRight="10dp"/>
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/fadeInSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:checked="false"
                android:theme="@style/SCBSwitch" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="23sp"
                android:textStyle="bold"
                android:text="@string/filtro"
                android:textColor="@color/white"/>
            <EditText
                android:visibility="gone"
                android:id="@+id/searchEditText"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:paddingLeft="5dp"
                android:hint="Nome"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/box_shape"
                android:layout_weight="1"/>


            <android.support.v7.widget.SwitchCompat
                android:id="@+id/searchSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:checked="false"
                android:theme="@style/SCBSwitch" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>