...
                    android:layout_marginRight="5dp"
                    android:background="@drawable/box_shape"
                    android:layout_weight="1"/>
            </LinearLayout>

            <gustavo.brilhante.githupjavapop.components.CustomActionBar_
                android:id="@+id/customActionBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.github.ksoichiro.android.observablescrollview.ObservableRecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </com.github.ksoichiro.android.observablescrollview.ObservableRecyclerView>

        </LinearLayout>
...
